@@ -18,6 +18,7 @@ import io.airlift.slice.Slices;
 import io.trino.parquet.DataPage;
 import io.trino.parquet.DataPageV1;
 import io.trino.parquet.ParquetDataSourceId;
+import io.trino.parquet.ParquetReaderOptions;
 import io.trino.parquet.PrimitiveField;
 import org.apache.parquet.column.values.ValuesWriter;
 import org.openjdk.jmh.annotations.Benchmark;
@@ -61,7 +62,7 @@ public abstract class AbstractColumnReaderBenchmark<VALUES>
     private static final int DATA_GENERATION_BATCH_SIZE = 16384;
     private static final int READ_BATCH_SIZE = 4096;
 
-    private final ColumnReaderFactory columnReaderFactory = new ColumnReaderFactory(UTC);
+    private final ColumnReaderFactory columnReaderFactory = new ColumnReaderFactory(UTC, ParquetReaderOptions.defaultOptions());
     private final List<DataPage> dataPages = new ArrayList<>();
     private int dataPositions;
 
@@ -104,7 +105,7 @@ public abstract class AbstractColumnReaderBenchmark<VALUES>
             throws IOException
     {
         ColumnReader columnReader = columnReaderFactory.create(field, newSimpleAggregatedMemoryContext());
-        PageReader pageReader = new PageReader(new ParquetDataSourceId("test"), UNCOMPRESSED, dataPages.iterator(), false, false);
+        PageReader pageReader = new PageReader(new ParquetDataSourceId("test"), UNCOMPRESSED, dataPages.iterator(), false, false, Optional.empty(), -1, -1);
         columnReader.setPageReader(pageReader, Optional.empty());
         int rowsRead = 0;
         while (rowsRead < dataPositions) {
@@ -132,14 +133,15 @@ public abstract class AbstractColumnReaderBenchmark<VALUES>
                 OptionalLong.empty(),
                 RLE,
                 RLE,
-                getParquetEncoding(writer.getEncoding()));
+                getParquetEncoding(writer.getEncoding()),
+                0);
     }
 
     protected static void run(Class<?> clazz)
             throws RunnerException
     {
         benchmark(clazz, WarmupMode.BULK)
-                .withOptions(optionsBuilder -> optionsBuilder.jvmArgsAppend("-Xmx4g", "-Xms4g"))
+                .withOptions(optionsBuilder -> optionsBuilder.jvmArgsAppend("-Xmx4g", "-Xms4g", "--add-modules=jdk.incubator.vector"))
                 .run();
     }
 }
