@@ -15,40 +15,42 @@ package io.trino.plugin.bigquery;
 
 import com.google.api.gax.rpc.FixedHeaderProvider;
 import com.google.api.gax.rpc.HeaderProvider;
+import com.google.common.collect.ImmutableMultimap;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.google.inject.Binder;
+import com.google.inject.Key;
 import com.google.inject.Provides;
 import com.google.inject.Scopes;
 import com.google.inject.Singleton;
 import com.google.inject.multibindings.Multibinder;
 import com.google.inject.multibindings.OptionalBinder;
 import io.airlift.configuration.AbstractConfigurationAwareModule;
+import io.trino.plugin.base.cache.identity.IdentityCacheMapping;
+import io.trino.plugin.base.cache.identity.SingletonIdentityCacheMapping;
 import io.trino.plugin.base.logging.FormatInterpolator;
 import io.trino.plugin.base.logging.SessionInterpolatedValues;
 import io.trino.plugin.base.session.SessionPropertiesProvider;
+import io.trino.plugin.bigquery.procedure.ExecuteProcedure;
 import io.trino.plugin.bigquery.ptf.Query;
-import io.trino.spi.NodeManager;
+import io.trino.spi.Node;
+import io.trino.spi.catalog.CatalogName;
 import io.trino.spi.function.table.ConnectorTableFunction;
+import io.trino.spi.procedure.Procedure;
 
-import java.lang.annotation.Target;
-import java.lang.management.ManagementFactory;
-import java.util.Set;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.concurrent.ExecutorService;
 
 import static com.google.common.util.concurrent.MoreExecutors.listeningDecorator;
 import static com.google.inject.multibindings.Multibinder.newSetBinder;
 import static com.google.inject.multibindings.OptionalBinder.newOptionalBinder;
+import static io.airlift.bootstrap.ClosingBinder.closingBinder;
 import static io.airlift.concurrent.Threads.daemonThreadsNamed;
 import static io.airlift.configuration.ConditionalModule.conditionalModule;
 import static io.airlift.configuration.ConfigBinder.configBinder;
-import static io.trino.plugin.bigquery.BigQueryConfig.EXPERIMENTAL_ARROW_SERIALIZATION_ENABLED;
-import static java.lang.annotation.ElementType.CONSTRUCTOR;
-import static java.lang.annotation.ElementType.FIELD;
-import static java.lang.annotation.ElementType.METHOD;
-import static java.lang.annotation.ElementType.PARAMETER;
+import static io.trino.plugin.base.JdkCompatibilityChecks.verifyConnectorAccessOpened;
+import static io.trino.plugin.base.JdkCompatibilityChecks.verifyConnectorUnsafeAllowed;
+import static java.util.concurrent.Executors.newCachedThreadPool;
 import static java.util.concurrent.Executors.newFixedThreadPool;
-import static java.util.stream.Collectors.toSet;
+import static org.weakref.jmx.guice.ExportBinder.newExporter;
 
 public class BigQueryConnectorModule
         extends AbstractConfigurationAwareModule
@@ -82,11 +84,13 @@ public class BigQueryConnectorModule
             binder.bind(ViewMaterializationCache.class).in(Scopes.SINGLETON);
             configBinder(binder).bindConfig(BigQueryConfig.class);
             configBinder(binder).bindConfig(BigQueryRpcConfig.class);
+            newOptionalBinder(binder, BigQueryArrowBufferAllocator.class);
             install(conditionalModule(
                     BigQueryConfig.class,
                     BigQueryConfig::isArrowSerializationEnabled,
-                    ClientModule::verifyPackageAccessAllowed));
+                    new ArrowSerializationModule()));
             newSetBinder(binder, ConnectorTableFunction.class).addBinding().toProvider(Query.class).in(Scopes.SINGLETON);
+            newSetBinder(binder, Procedure.class).addBinding().toProvider(ExecuteProcedure.class).in(Scopes.SINGLETON);
             newSetBinder(binder, SessionPropertiesProvider.class).addBinding().to(BigQuerySessionProperties.class).in(Scopes.SINGLETON);
 
             Multibinder<BigQueryOptionsConfigurer> optionsConfigurers = newSetBinder(binder, BigQueryOptionsConfigurer.class);
@@ -105,13 +109,16 @@ public class BigQueryConnectorModule
                         newSetBinder(proxyBinder, BigQueryOptionsConfigurer.class).addBinding().to(ProxyOptionsConfigurer.class).in(Scopes.SINGLETON);
                         newOptionalBinder(binder, ProxyTransportFactory.class).setDefault().to(ProxyTransportFactory.DefaultProxyTransportFactory.class).in(Scopes.SINGLETON);
                     }));
+
+            closingBinder(binder).registerExecutor(ListeningExecutorService.class);
+            closingBinder(binder).registerExecutor(Key.get(ExecutorService.class, ForBigQueryPageSource.class));
         }
 
         @Provides
         @Singleton
-        public static HeaderProvider createHeaderProvider(NodeManager nodeManager)
+        public static HeaderProvider createHeaderProvider(Node currentNode)
         {
-            return FixedHeaderProvider.create("user-agent", "Trino/" + nodeManager.getCurrentNode().getVersion());
+            return FixedHeaderProvider.create("user-agent", "Trino/" + currentNode.getVersion());
         }
 
         @Provides
@@ -122,38 +129,18 @@ public class BigQueryConnectorModule
         }
 
         @Provides
-        @ForBigQuery
+        @Singleton
         public ListeningExecutorService provideListeningExecutor(BigQueryConfig config)
         {
             return listeningDecorator(newFixedThreadPool(config.getMetadataParallelism(), daemonThreadsNamed("big-query-%s"))); // limit parallelism
         }
 
-        /**
-         * Apache Arrow requires reflective access to certain Java internals prohibited since Java 17.
-         * Adds an error to the {@code binder} if required --add-opens is not passed to the JVM.
-         */
-        private static void verifyPackageAccessAllowed(Binder binder)
+        @Provides
+        @Singleton
+        @ForBigQueryPageSource
+        public ExecutorService provideExecutor(CatalogName catalogName)
         {
-            // Match an --add-opens argument that opens a package to unnamed modules.
-            // The first group is the opened package.
-            Pattern argPattern = Pattern.compile(
-                    "^--add-opens=(.*)=([A-Za-z0-9_.]+,)*ALL-UNNAMED(,[A-Za-z0-9_.]+)*$");
-            // We don't need to check for values in separate arguments because
-            // they are joined with "=" before we get them.
-
-            Set<String> openedModules = ManagementFactory.getRuntimeMXBean()
-                    .getInputArguments()
-                    .stream()
-                    .map(argPattern::matcher)
-                    .filter(Matcher::matches)
-                    .map(matcher -> matcher.group(1))
-                    .collect(toSet());
-
-            if (!openedModules.contains("java.base/java.nio")) {
-                binder.addError(
-                        "BigQuery connector requires additional JVM arguments to run when '" + EXPERIMENTAL_ARROW_SERIALIZATION_ENABLED + "' is enabled. " +
-                                "Please add '--add-opens=java.base/java.nio=ALL-UNNAMED' to the JVM configuration.");
-            }
+            return newCachedThreadPool(daemonThreadsNamed("bigquery-" + catalogName + "-%s"));
         }
     }
 
@@ -168,7 +155,7 @@ public class BigQueryConnectorModule
             // as credentials do not depend on actual connector session.
             newOptionalBinder(binder, IdentityCacheMapping.class)
                     .setDefault()
-                    .to(IdentityCacheMapping.SingletonIdentityCacheMapping.class)
+                    .to(SingletonIdentityCacheMapping.class)
                     .in(Scopes.SINGLETON);
 
             OptionalBinder<BigQueryCredentialsSupplier> credentialsSupplierBinder = newOptionalBinder(binder, BigQueryCredentialsSupplier.class);
@@ -187,8 +174,24 @@ public class BigQueryConnectorModule
         }
     }
 
-    @Target({PARAMETER, FIELD, METHOD, CONSTRUCTOR})
-    public @interface ForBigQuery
+    public static class ArrowSerializationModule
+            extends AbstractConfigurationAwareModule
     {
+        @Override
+        protected void setup(Binder binder)
+        {
+            // Check reflective access allowed - required by Apache Arrow usage in BigQuery
+            verifyConnectorAccessOpened(
+                    binder,
+                    "bigquery",
+                    ImmutableMultimap.of("java.base", "java.nio"));
+            verifyConnectorUnsafeAllowed(binder, "bigquery");
+
+            configBinder(binder).bindConfig(BigQueryArrowConfig.class);
+            binder.bind(BigQueryArrowBufferAllocator.class).in(Scopes.SINGLETON);
+            binder.bind(BigQueryArrowAllocatorStats.class).in(Scopes.SINGLETON);
+
+            newExporter(binder).export(BigQueryArrowBufferAllocator.class).withGeneratedName();
+        }
     }
 }
