@@ -16,10 +16,14 @@ package io.trino.plugin.memory;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import io.airlift.units.DataSize;
+import io.trino.plugin.memory.MemoryInsertTableHandle.InsertMode;
 import io.trino.spi.HostAddress;
 import io.trino.spi.Page;
 import io.trino.spi.TrinoException;
 import io.trino.spi.block.BlockBuilder;
+import io.trino.spi.block.ByteArrayBlock;
+import io.trino.spi.block.IntArrayBlock;
+import io.trino.spi.block.RunLengthEncodedBlock;
 import io.trino.spi.connector.ConnectorInsertTableHandle;
 import io.trino.spi.connector.ConnectorOutputTableHandle;
 import io.trino.spi.connector.ConnectorPageSink;
@@ -28,10 +32,14 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.parallel.Execution;
 
+import java.util.List;
 import java.util.OptionalDouble;
 import java.util.OptionalLong;
 
+import static io.trino.block.BlockAssertions.createLongSequenceBlock;
 import static io.trino.spi.type.BigintType.BIGINT;
+import static io.trino.spi.type.BooleanType.BOOLEAN;
+import static io.trino.spi.type.IntegerType.INTEGER;
 import static io.trino.testing.TestingConnectorSession.SESSION;
 import static io.trino.testing.TestingPageSinkId.TESTING_PAGE_SINK_ID;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -59,7 +67,7 @@ public class TestMemoryPagesStore
     public void testCreateEmptyTable()
     {
         createTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
     }
 
     @Test
@@ -67,21 +75,21 @@ public class TestMemoryPagesStore
     {
         createTable(0L, 0L);
         insertToTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty()).size()).isEqualTo(1);
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty())).hasSize(1);
     }
 
     @Test
     public void testInsertPageWithoutCreate()
     {
         insertToTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty()).size()).isEqualTo(1);
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty())).hasSize(1);
     }
 
     @Test
     public void testReadFromUnknownTable()
     {
         assertThatThrownBy(() -> {
-            pagesStore.getPages(0L, 0, 1, new int[] {0}, 0, OptionalLong.empty(), OptionalDouble.empty());
+            pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 0, OptionalLong.empty(), OptionalDouble.empty());
         })
                 .isInstanceOf(TrinoException.class);
     }
@@ -90,10 +98,33 @@ public class TestMemoryPagesStore
     public void testTryToReadFromEmptyTable()
     {
         createTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
-        assertThatThrownBy(() -> pagesStore.getPages(0L, 0, 1, new int[] {0}, 42, OptionalLong.empty(), OptionalDouble.empty()))
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
+        assertThatThrownBy(() -> pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 42, OptionalLong.empty(), OptionalDouble.empty()))
                 .isInstanceOf(TrinoException.class)
                 .hasMessageMatching("Expected to find.*");
+    }
+
+    @Test
+    public void testReadBackExtraColumns()
+    {
+        createTable(0L, 0L);
+        int positions = 1024;
+        // insert single BIGINT column page
+        insertToTable(0L, new Page(createLongSequenceBlock(0, positions)), 0L);
+        // Read back as BIGINT, INTEGER, BOOLEAN expecting the INTEGER and BOOLEAN columns to be RLE encoded
+        List<Page> readBack = pagesStore.getPages(0L, 0, 1, new int[] {0, 1, 2}, List.of(BIGINT, INTEGER, BOOLEAN), positions, OptionalLong.empty(), OptionalDouble.empty());
+        assertThat(readBack).hasSize(1);
+        Page readPage = readBack.getFirst();
+        assertThat(readPage.getChannelCount()).isEqualTo(3);
+        assertThat(readPage.getPositionCount()).isEqualTo(positions);
+        assertThat(readPage.getBlock(1))
+                .isInstanceOf(RunLengthEncodedBlock.class);
+        assertThat(readPage.getBlock(1).getUnderlyingValueBlock())
+                .isInstanceOf(IntArrayBlock.class);
+        assertThat(readPage.getBlock(2))
+                .isInstanceOf(RunLengthEncodedBlock.class);
+        assertThat(readPage.getBlock(2).getUnderlyingValueBlock())
+                .isInstanceOf(ByteArrayBlock.class);
     }
 
     @Test
@@ -130,6 +161,15 @@ public class TestMemoryPagesStore
                 .hasMessageMatching("Memory limit.*");
     }
 
+    @Test
+    public void testTruncate()
+    {
+        createTable(0L, 0L);
+        insertToTable(0L, createOneMegaBytePage(), 0L);
+        truncateTable(0L, 0L);
+        insertToTable(0L, createOneMegaBytePage(), 0L);
+    }
+
     private void insertToTable(long tableId, Long... activeTableIds)
     {
         insertToTable(tableId, createPage(), activeTableIds);
@@ -156,6 +196,16 @@ public class TestMemoryPagesStore
         pageSink.finish();
     }
 
+    private void truncateTable(long tableId, Long... activeTableIds)
+    {
+        ConnectorPageSink pageSink = pageSinkProvider.createPageSink(
+                MemoryTransactionHandle.INSTANCE,
+                SESSION,
+                createOverwriteMemoryInsertTableHandle(tableId, activeTableIds),
+                TESTING_PAGE_SINK_ID);
+        pageSink.finish();
+    }
+
     private static ConnectorOutputTableHandle createMemoryOutputTableHandle(long tableId, Long... activeTableIds)
     {
         return new MemoryOutputTableHandle(tableId, ImmutableSet.copyOf(activeTableIds));
@@ -163,7 +213,12 @@ public class TestMemoryPagesStore
 
     private static ConnectorInsertTableHandle createMemoryInsertTableHandle(long tableId, Long[] activeTableIds)
     {
-        return new MemoryInsertTableHandle(tableId, ImmutableSet.copyOf(activeTableIds));
+        return new MemoryInsertTableHandle(tableId, InsertMode.APPEND, ImmutableSet.copyOf(activeTableIds));
+    }
+
+    private static ConnectorInsertTableHandle createOverwriteMemoryInsertTableHandle(long tableId, Long[] activeTableIds)
+    {
+        return new MemoryInsertTableHandle(tableId, InsertMode.OVERWRITE, ImmutableSet.copyOf(activeTableIds));
     }
 
     private static Page createPage()
