@@ -14,10 +14,12 @@
 package io.trino.plugin.mongodb;
 
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.base.Supplier;
 import com.google.common.cache.Cache;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
 import com.google.common.collect.Ordering;
 import com.google.common.collect.Streams;
 import com.google.common.primitives.Primitives;
@@ -25,6 +27,7 @@ import com.google.common.primitives.Shorts;
 import com.google.common.primitives.SignedBytes;
 import com.google.common.util.concurrent.UncheckedExecutionException;
 import com.mongodb.DBRef;
+import com.mongodb.MongoCommandException;
 import com.mongodb.MongoNamespace;
 import com.mongodb.client.FindIterable;
 import com.mongodb.client.MongoClient;
@@ -50,24 +53,22 @@ import io.trino.spi.connector.TableNotFoundException;
 import io.trino.spi.predicate.Domain;
 import io.trino.spi.predicate.Range;
 import io.trino.spi.predicate.TupleDomain;
+import io.trino.spi.type.ArrayType;
 import io.trino.spi.type.CharType;
 import io.trino.spi.type.DecimalType;
 import io.trino.spi.type.Decimals;
 import io.trino.spi.type.Int128;
 import io.trino.spi.type.IntegerType;
-import io.trino.spi.type.NamedTypeSignature;
-import io.trino.spi.type.RowFieldName;
-import io.trino.spi.type.StandardTypes;
+import io.trino.spi.type.RowType;
 import io.trino.spi.type.Type;
 import io.trino.spi.type.TypeManager;
-import io.trino.spi.type.TypeSignature;
-import io.trino.spi.type.TypeSignatureParameter;
 import io.trino.spi.type.VarcharType;
 import org.bson.Document;
 import org.bson.types.Binary;
 import org.bson.types.Decimal128;
 import org.bson.types.ObjectId;
 
+import java.io.Closeable;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -82,7 +83,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.google.common.base.Preconditions.checkArgument;
@@ -91,6 +91,7 @@ import static com.google.common.base.Throwables.throwIfInstanceOf;
 import static com.google.common.base.Verify.verify;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.collect.ImmutableSet.toImmutableSet;
+import static io.trino.plugin.mongodb.MongoErrorCode.MONGODB_CLUSTER_ERROR;
 import static io.trino.plugin.mongodb.ObjectIdType.OBJECT_ID;
 import static io.trino.plugin.mongodb.ptf.Query.parseFilter;
 import static io.trino.spi.HostAddress.fromParts;
@@ -128,6 +129,7 @@ import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 public class MongoSession
+        implements Closeable
 {
     private static final Logger log = Logger.get(MongoSession.class);
     private static final Set<String> SYSTEM_DATABASES = Set.of("admin", "local", "config");
@@ -167,10 +169,10 @@ public class MongoSession
             .buildOrThrow();
 
     private static final Ordering<MongoColumnHandle> COLUMN_HANDLE_ORDERING = Ordering
-            .from(Comparator.comparingInt(columnHandle -> columnHandle.getDereferenceNames().size()));
+            .from(Comparator.comparingInt(columnHandle -> columnHandle.dereferenceNames().size()));
 
     private final TypeManager typeManager;
-    private final MongoClient client;
+    private final Supplier<MongoClient> client;
 
     private final String schemaCollection;
     private final boolean caseInsensitiveNameMatching;
@@ -179,7 +181,7 @@ public class MongoSession
     private final Cache<SchemaTableName, MongoTable> tableCache;
     private final String implicitPrefix;
 
-    public MongoSession(TypeManager typeManager, MongoClient client, MongoClientConfig config)
+    public MongoSession(TypeManager typeManager, Supplier<MongoClient> client, MongoClientConfig config)
     {
         this.typeManager = requireNonNull(typeManager, "typeManager is null");
         this.client = requireNonNull(client, "client is null");
@@ -193,14 +195,16 @@ public class MongoSession
                 .build();
     }
 
-    public void shutdown()
+    @Override
+    public void close()
     {
-        client.close();
+        // Close the shared MongoClient instance that was created lazily
+        getClient().close();
     }
 
     public List<HostAddress> getAddresses()
     {
-        return client.getClusterDescription().getServerDescriptions().stream()
+        return getClient().getClusterDescription().getServerDescriptions().stream()
                 .map(description -> fromParts(description.getAddress().getHost(), description.getAddress().getPort()))
                 .collect(toImmutableList());
     }
@@ -216,12 +220,12 @@ public class MongoSession
     public void createSchema(String schemaName)
     {
         // Put an empty schema collection because MongoDB doesn't support a database without collections
-        client.getDatabase(schemaName).createCollection(schemaCollection);
+        getClient().getDatabase(schemaName).createCollection(schemaCollection);
     }
 
     public void dropSchema(String schemaName, boolean cascade)
     {
-        MongoDatabase database = client.getDatabase(toRemoteSchemaName(schemaName));
+        MongoDatabase database = getClient().getDatabase(toRemoteSchemaName(schemaName));
         if (!cascade) {
             try (MongoCursor<String> collections = database.listCollectionNames().cursor()) {
                 while (collections.hasNext()) {
@@ -247,7 +251,9 @@ public class MongoSession
                 .collect(toSet()));
         builder.addAll(getTableMetadataNames(schemaName));
 
-        return builder.build();
+        return builder.build().stream()
+                .map(name -> name.toLowerCase(ENGLISH))
+                .collect(toImmutableSet());
     }
 
     public MongoTable getTable(SchemaTableName tableName)
@@ -257,18 +263,24 @@ public class MongoSession
             return tableCache.get(tableName, () -> loadTableSchema(tableName));
         }
         catch (ExecutionException | UncheckedExecutionException e) {
-            throwIfInstanceOf(e.getCause(), TrinoException.class);
+            Throwable cause = e.getCause();
+            if (cause != null) {
+                throwIfInstanceOf(cause, TrinoException.class);
+                if (cause instanceof MongoCommandException) {
+                    throw new TrinoException(MONGODB_CLUSTER_ERROR, cause);
+                }
+            }
             throw new RuntimeException(e);
         }
     }
 
     public void createTable(RemoteTableName name, List<MongoColumnHandle> columns, Optional<String> comment)
     {
-        if (getAllSchemas().stream().noneMatch(schemaName -> schemaName.equalsIgnoreCase(name.getDatabaseName()))) {
-            throw new SchemaNotFoundException(name.getDatabaseName());
+        if (getAllSchemas().stream().noneMatch(schemaName -> schemaName.equalsIgnoreCase(name.databaseName()))) {
+            throw new SchemaNotFoundException(name.databaseName());
         }
         createTableMetadata(name, columns, comment);
-        client.getDatabase(name.getDatabaseName()).createCollection(name.getCollectionName());
+        getClient().getDatabase(name.databaseName()).createCollection(name.collectionName());
     }
 
     public void dropTable(RemoteTableName remoteTableName)
@@ -276,27 +288,27 @@ public class MongoSession
         deleteTableMetadata(remoteTableName);
         getCollection(remoteTableName).drop();
 
-        tableCache.invalidate(new SchemaTableName(remoteTableName.getDatabaseName(), remoteTableName.getCollectionName()));
+        tableCache.invalidate(new SchemaTableName(remoteTableName.databaseName(), remoteTableName.collectionName()));
     }
 
     public void setTableComment(MongoTableHandle table, Optional<String> comment)
     {
-        String remoteSchemaName = table.getRemoteTableName().getDatabaseName();
-        String remoteTableName = table.getRemoteTableName().getCollectionName();
+        String remoteSchemaName = table.remoteTableName().databaseName();
+        String remoteTableName = table.remoteTableName().collectionName();
 
         Document metadata = getTableMetadata(remoteSchemaName, remoteTableName);
         metadata.append(COMMENT_KEY, comment.orElse(null));
 
-        client.getDatabase(remoteSchemaName).getCollection(schemaCollection)
+        getClient().getDatabase(remoteSchemaName).getCollection(schemaCollection)
                 .findOneAndReplace(new Document(TABLE_NAME_KEY, remoteTableName), metadata);
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     public void setColumnComment(MongoTableHandle table, String columnName, Optional<String> comment)
     {
-        String remoteSchemaName = table.getRemoteTableName().getDatabaseName();
-        String remoteTableName = table.getRemoteTableName().getCollectionName();
+        String remoteSchemaName = table.remoteTableName().databaseName();
+        String remoteTableName = table.remoteTableName().collectionName();
 
         Document metadata = getTableMetadata(remoteSchemaName, remoteTableName);
 
@@ -310,39 +322,39 @@ public class MongoSession
 
         metadata.append(FIELDS_KEY, columns.build());
 
-        client.getDatabase(remoteSchemaName).getCollection(schemaCollection)
+        getClient().getDatabase(remoteSchemaName).getCollection(schemaCollection)
                 .findOneAndReplace(new Document(TABLE_NAME_KEY, remoteTableName), metadata);
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     public void renameTable(MongoTableHandle table, SchemaTableName newName)
     {
-        String oldSchemaName = table.getRemoteTableName().getDatabaseName();
-        String oldTableName = table.getRemoteTableName().getCollectionName();
+        String oldSchemaName = table.remoteTableName().databaseName();
+        String oldTableName = table.remoteTableName().collectionName();
         String newSchemaName = toRemoteSchemaName(newName.getSchemaName());
 
         // Schema collection should always have the source table definition
-        MongoCollection<Document> oldSchema = client.getDatabase(oldSchemaName).getCollection(schemaCollection);
+        MongoCollection<Document> oldSchema = getClient().getDatabase(oldSchemaName).getCollection(schemaCollection);
         Document tableDefinition = oldSchema.findOneAndDelete(new Document(TABLE_NAME_KEY, oldTableName));
         requireNonNull(tableDefinition, "Table definition not found in schema collection: " + oldTableName);
 
-        MongoCollection<Document> newSchema = client.getDatabase(newSchemaName).getCollection(schemaCollection);
+        MongoCollection<Document> newSchema = getClient().getDatabase(newSchemaName).getCollection(schemaCollection);
         tableDefinition.append(TABLE_NAME_KEY, newName.getTableName());
         newSchema.insertOne(tableDefinition);
 
         // Need to check explicitly because the old collection may not exist when it doesn't have any data
-        if (collectionExists(client.getDatabase(oldSchemaName), oldTableName)) {
-            getCollection(table.getRemoteTableName()).renameCollection(new MongoNamespace(newSchemaName, newName.getTableName()));
+        if (collectionExists(getClient().getDatabase(oldSchemaName), oldTableName)) {
+            getCollection(table.remoteTableName()).renameCollection(new MongoNamespace(newSchemaName, newName.getTableName()));
         }
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     public void addColumn(MongoTableHandle table, ColumnMetadata columnMetadata)
     {
-        String remoteSchemaName = table.getRemoteTableName().getDatabaseName();
-        String remoteTableName = table.getRemoteTableName().getCollectionName();
+        String remoteSchemaName = table.remoteTableName().databaseName();
+        String remoteTableName = table.remoteTableName().collectionName();
 
         Document metadata = getTableMetadata(remoteSchemaName, remoteTableName);
 
@@ -350,24 +362,24 @@ public class MongoSession
 
         Document newColumn = new Document();
         newColumn.append(FIELDS_NAME_KEY, columnMetadata.getName());
-        newColumn.append(FIELDS_TYPE_KEY, columnMetadata.getType().getTypeSignature().toString());
+        newColumn.append(FIELDS_TYPE_KEY, columnMetadata.getType().getDisplayName());
         newColumn.append(COMMENT_KEY, columnMetadata.getComment());
         newColumn.append(FIELDS_HIDDEN_KEY, false);
         columns.add(newColumn);
 
         metadata.append(FIELDS_KEY, columns);
 
-        MongoDatabase db = client.getDatabase(remoteSchemaName);
+        MongoDatabase db = getClient().getDatabase(remoteSchemaName);
         MongoCollection<Document> schema = db.getCollection(schemaCollection);
         schema.findOneAndReplace(new Document(TABLE_NAME_KEY, remoteTableName), metadata);
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     public void renameColumn(MongoTableHandle table, String source, String target)
     {
-        String remoteSchemaName = table.getRemoteTableName().getDatabaseName();
-        String remoteTableName = table.getRemoteTableName().getCollectionName();
+        String remoteSchemaName = table.remoteTableName().databaseName();
+        String remoteTableName = table.remoteTableName().collectionName();
 
         Document metadata = getTableMetadata(remoteSchemaName, remoteTableName);
 
@@ -382,20 +394,20 @@ public class MongoSession
 
         metadata.append(FIELDS_KEY, columns);
 
-        MongoDatabase database = client.getDatabase(remoteSchemaName);
+        MongoDatabase database = getClient().getDatabase(remoteSchemaName);
         MongoCollection<Document> schema = database.getCollection(schemaCollection);
         schema.findOneAndReplace(new Document(TABLE_NAME_KEY, remoteTableName), metadata);
 
         database.getCollection(remoteTableName)
                 .updateMany(Filters.empty(), Updates.rename(source, target));
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     public void dropColumn(MongoTableHandle table, String columnName)
     {
-        String remoteSchemaName = table.getRemoteTableName().getDatabaseName();
-        String remoteTableName = table.getRemoteTableName().getCollectionName();
+        String remoteSchemaName = table.remoteTableName().databaseName();
+        String remoteTableName = table.remoteTableName().collectionName();
 
         Document metadata = getTableMetadata(remoteSchemaName, remoteTableName);
 
@@ -405,27 +417,27 @@ public class MongoSession
 
         metadata.append(FIELDS_KEY, columns);
 
-        MongoDatabase database = client.getDatabase(remoteSchemaName);
+        MongoDatabase database = getClient().getDatabase(remoteSchemaName);
         MongoCollection<Document> schema = database.getCollection(schemaCollection);
         schema.findOneAndReplace(new Document(TABLE_NAME_KEY, remoteTableName), metadata);
 
         database.getCollection(remoteTableName)
                 .updateMany(Filters.empty(), Updates.unset(columnName));
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     public void setColumnType(MongoTableHandle table, String columnName, Type type)
     {
-        String remoteSchemaName = table.getRemoteTableName().getDatabaseName();
-        String remoteTableName = table.getRemoteTableName().getCollectionName();
+        String remoteSchemaName = table.remoteTableName().databaseName();
+        String remoteTableName = table.remoteTableName().collectionName();
 
         Document metadata = getTableMetadata(remoteSchemaName, remoteTableName);
 
         List<Document> columns = getColumnMetadata(metadata).stream()
                 .map(document -> {
                     if (document.getString(FIELDS_NAME_KEY).equals(columnName)) {
-                        document.put(FIELDS_TYPE_KEY, type.getTypeSignature().toString());
+                        document.put(FIELDS_TYPE_KEY, type.getDisplayName());
                         return document;
                     }
                     return document;
@@ -434,18 +446,18 @@ public class MongoSession
 
         metadata.replace(FIELDS_KEY, columns);
 
-        client.getDatabase(remoteSchemaName).getCollection(schemaCollection)
+        getClient().getDatabase(remoteSchemaName).getCollection(schemaCollection)
                 .findOneAndReplace(new Document(TABLE_NAME_KEY, remoteTableName), metadata);
 
-        tableCache.invalidate(table.getSchemaTableName());
+        tableCache.invalidate(table.schemaTableName());
     }
 
     private MongoTable loadTableSchema(SchemaTableName schemaTableName)
             throws TableNotFoundException
     {
         RemoteTableName remoteSchemaTableName = toRemoteSchemaTableName(schemaTableName);
-        String remoteSchemaName = remoteSchemaTableName.getDatabaseName();
-        String remoteTableName = remoteSchemaTableName.getCollectionName();
+        String remoteSchemaName = remoteSchemaTableName.databaseName();
+        String remoteTableName = remoteSchemaTableName.collectionName();
 
         Document tableMeta = getTableMetadata(remoteSchemaName, remoteTableName);
 
@@ -488,7 +500,7 @@ public class MongoSession
 
     public MongoCollection<Document> getCollection(RemoteTableName remoteTableName)
     {
-        return client.getDatabase(remoteTableName.getDatabaseName()).getCollection(remoteTableName.getCollectionName());
+        return getClient().getDatabase(remoteTableName.databaseName()).getCollection(remoteTableName.collectionName());
     }
 
     public List<MongoIndex> getIndexes(String schemaName, String tableName)
@@ -496,7 +508,7 @@ public class MongoSession
         if (isView(schemaName, tableName)) {
             return ImmutableList.of();
         }
-        MongoCollection<Document> collection = client.getDatabase(schemaName).getCollection(tableName);
+        MongoCollection<Document> collection = getClient().getDatabase(schemaName).getCollection(tableName);
         return MongoIndex.parse(collection.listIndexes());
     }
 
@@ -511,16 +523,16 @@ public class MongoSession
 
     public MongoCursor<Document> execute(MongoTableHandle tableHandle, List<MongoColumnHandle> columns)
     {
-        Set<MongoColumnHandle> projectedColumns = tableHandle.getProjectedColumns();
+        Set<MongoColumnHandle> projectedColumns = tableHandle.projectedColumns();
         checkArgument(projectedColumns.isEmpty() || projectedColumns.containsAll(columns), "projectedColumns must be empty or equal to columns");
 
-        Document projection = buildProjection(columns);
+        Document projection = buildProjection(columns, implicitPrefix);
 
-        MongoCollection<Document> collection = getCollection(tableHandle.getRemoteTableName());
+        MongoCollection<Document> collection = getCollection(tableHandle.remoteTableName());
         Document filter = buildFilter(tableHandle);
         FindIterable<Document> iterable = collection.find(filter).projection(projection).collation(SIMPLE_COLLATION);
-        tableHandle.getLimit().ifPresent(iterable::limit);
-        log.debug("Find documents: collection: %s, filter: %s, projection: %s", tableHandle.getSchemaTableName(), filter, projection);
+        tableHandle.limit().ifPresent(iterable::limit);
+        log.debug("Find documents: collection: %s, filter: %s, projection: %s", tableHandle.schemaTableName(), filter, projection);
 
         if (cursorBatchSize != 0) {
             iterable.batchSize(cursorBatchSize);
@@ -530,7 +542,7 @@ public class MongoSession
     }
 
     @VisibleForTesting
-    static Document buildProjection(List<MongoColumnHandle> columns)
+    static Document buildProjection(List<MongoColumnHandle> columns, String implicitPrefix)
     {
         Document output = new Document();
 
@@ -542,7 +554,13 @@ public class MongoSession
         // Starting in MongoDB 4.4, it is illegal to project an embedded document with any of the embedded document's fields
         // (https://www.mongodb.com/docs/manual/reference/limits/#mongodb-limit-Projection-Restrictions). So, Project only sufficient columns.
         for (MongoColumnHandle column : projectSufficientColumns(columns)) {
-            output.append(column.getQualifiedName(), 1);
+            if (column.dereferenceNames().stream().anyMatch(columnName -> TypeUtils.isImplicitRowField(columnName, implicitPrefix))) {
+                // Add parent field for implicit column
+                output.append(column.baseName(), 1);
+            }
+            else {
+                output.append(column.getQualifiedName(), 1);
+            }
         }
 
         return output;
@@ -567,12 +585,12 @@ public class MongoSession
     private static boolean parentColumnExists(List<MongoColumnHandle> existingColumns, MongoColumnHandle column)
     {
         for (MongoColumnHandle existingColumn : existingColumns) {
-            List<String> existingColumnDereferenceNames = existingColumn.getDereferenceNames();
+            List<String> existingColumnDereferenceNames = existingColumn.dereferenceNames();
             verify(
-                    column.getDereferenceNames().size() >= existingColumnDereferenceNames.size(),
+                    column.dereferenceNames().size() >= existingColumnDereferenceNames.size(),
                     "Selected column's dereference size must be greater than or equal to the existing column's dereference size");
-            if (existingColumn.getBaseName().equals(column.getBaseName())
-                    && column.getDereferenceNames().subList(0, existingColumnDereferenceNames.size()).equals(existingColumnDereferenceNames)) {
+            if (existingColumn.baseName().equals(column.baseName())
+                    && column.dereferenceNames().subList(0, existingColumnDereferenceNames.size()).equals(existingColumnDereferenceNames)) {
                 return true;
             }
         }
@@ -583,8 +601,8 @@ public class MongoSession
     {
         // Use $and operator because Document.putAll method overwrites existing entries where the key already exists
         ImmutableList.Builder<Document> filter = ImmutableList.builder();
-        table.getFilter().ifPresent(json -> filter.add(parseFilter(json)));
-        filter.add(buildQuery(table.getConstraint()));
+        table.filter().ifPresent(json -> filter.add(parseFilter(json)));
+        filter.add(buildQuery(table.constraint()));
         return andPredicate(filter.build());
     }
 
@@ -607,7 +625,7 @@ public class MongoSession
     private static Optional<Document> buildPredicate(MongoColumnHandle column, Domain domain)
     {
         String name = column.getQualifiedName();
-        Type type = column.getType();
+        Type type = column.type();
         if (domain.getValues().isNone() && domain.isNullAllowed()) {
             return Optional.of(documentOf(name, isNullPredicate()));
         }
@@ -782,7 +800,7 @@ public class MongoSession
     private Document getTableMetadata(String schemaName, String tableName)
             throws TableNotFoundException
     {
-        MongoDatabase db = client.getDatabase(schemaName);
+        MongoDatabase db = getClient().getDatabase(schemaName);
         MongoCollection<Document> schema = db.getCollection(schemaCollection);
 
         Document doc = schema
@@ -819,12 +837,12 @@ public class MongoSession
     private boolean indexExists(MongoCollection<Document> schemaCollection)
     {
         return MongoIndex.parse(schemaCollection.listIndexes()).stream()
-                .anyMatch(index -> index.getKeys().size() == 1 && TABLE_NAME_KEY.equals(index.getKeys().get(0).getName()));
+                .anyMatch(index -> index.keys().size() == 1 && TABLE_NAME_KEY.equals(index.keys().get(0).name()));
     }
 
     private Set<String> getTableMetadataNames(String schemaName)
     {
-        try (MongoCursor<Document> cursor = client.getDatabase(schemaName).getCollection(schemaCollection)
+        try (MongoCursor<Document> cursor = getClient().getDatabase(schemaName).getCollection(schemaCollection)
                 .find().projection(new Document(TABLE_NAME_KEY, true)).iterator()) {
             return Streams.stream(cursor)
                     .map(document -> document.getString(TABLE_NAME_KEY))
@@ -834,14 +852,14 @@ public class MongoSession
 
     private void createTableMetadata(RemoteTableName remoteSchemaTableName, List<MongoColumnHandle> columns, Optional<String> tableComment)
     {
-        String remoteSchemaName = remoteSchemaTableName.getDatabaseName();
-        String remoteTableName = remoteSchemaTableName.getCollectionName();
+        String remoteSchemaName = remoteSchemaTableName.databaseName();
+        String remoteTableName = remoteSchemaTableName.collectionName();
 
-        MongoDatabase db = client.getDatabase(remoteSchemaName);
+        MongoDatabase db = getClient().getDatabase(remoteSchemaName);
         Document metadata = new Document(TABLE_NAME_KEY, remoteTableName);
 
         ArrayList<Document> fields = new ArrayList<>();
-        if (!columns.stream().anyMatch(c -> c.getBaseName().equals("_id"))) {
+        if (!columns.stream().anyMatch(c -> c.baseName().equals("_id"))) {
             fields.add(new MongoColumnHandle("_id", ImmutableList.of(), OBJECT_ID, true, false, Optional.empty()).getDocument());
         }
 
@@ -862,23 +880,23 @@ public class MongoSession
 
     private boolean deleteTableMetadata(RemoteTableName remoteTableName)
     {
-        MongoDatabase db = client.getDatabase(remoteTableName.getDatabaseName());
-        if (!collectionExists(db, remoteTableName.getCollectionName()) &&
-                db.getCollection(schemaCollection).find(new Document(TABLE_NAME_KEY, remoteTableName.getCollectionName())).first().isEmpty()) {
+        MongoDatabase db = getClient().getDatabase(remoteTableName.databaseName());
+        if (!collectionExists(db, remoteTableName.collectionName()) &&
+                db.getCollection(schemaCollection).find(new Document(TABLE_NAME_KEY, remoteTableName.collectionName())).first().isEmpty()) {
             return false;
         }
 
         DeleteResult result = db.getCollection(schemaCollection)
-                .deleteOne(new Document(TABLE_NAME_KEY, remoteTableName.getCollectionName()));
+                .deleteOne(new Document(TABLE_NAME_KEY, remoteTableName.collectionName()));
 
         return result.getDeletedCount() == 1;
     }
 
     private List<Document> guessTableFields(String schemaName, String tableName)
     {
-        MongoDatabase db = client.getDatabase(schemaName);
+        MongoDatabase db = getClient().getDatabase(schemaName);
         Document doc = db.getCollection(tableName).find().first();
-        if (doc == null) {
+        if (doc == null || doc.isEmpty()) {
             // no records at the collection
             return ImmutableList.of();
         }
@@ -887,13 +905,13 @@ public class MongoSession
 
         for (String key : doc.keySet()) {
             Object value = doc.get(key);
-            Optional<TypeSignature> fieldType = guessFieldType(value);
+            Optional<Type> fieldType = guessFieldType(value);
             if (fieldType.isPresent()) {
                 Document metadata = new Document();
                 metadata.append(FIELDS_NAME_KEY, key);
-                metadata.append(FIELDS_TYPE_KEY, fieldType.get().toString());
+                metadata.append(FIELDS_TYPE_KEY, fieldType.get().getDisplayName());
                 metadata.append(FIELDS_HIDDEN_KEY,
-                        key.equals("_id") && fieldType.get().equals(OBJECT_ID.getTypeSignature()));
+                        key.equals("_id") && fieldType.get().equals(OBJECT_ID));
 
                 builder.add(metadata);
             }
@@ -905,27 +923,27 @@ public class MongoSession
         return builder.build();
     }
 
-    private Optional<TypeSignature> guessFieldType(Object value)
+    private Optional<Type> guessFieldType(Object value)
     {
         if (value == null) {
             return Optional.empty();
         }
 
-        TypeSignature typeSignature = null;
+        Type type = null;
         if (value instanceof String) {
-            typeSignature = createUnboundedVarcharType().getTypeSignature();
+            type = createUnboundedVarcharType();
         }
         if (value instanceof Binary) {
-            typeSignature = VARBINARY.getTypeSignature();
+            type = VARBINARY;
         }
         else if (value instanceof Integer || value instanceof Long) {
-            typeSignature = BIGINT.getTypeSignature();
+            type = BIGINT;
         }
         else if (value instanceof Boolean) {
-            typeSignature = BOOLEAN.getTypeSignature();
+            type = BOOLEAN;
         }
         else if (value instanceof Float || value instanceof Double) {
-            typeSignature = DOUBLE.getTypeSignature();
+            type = DOUBLE;
         }
         else if (value instanceof Decimal128 decimal128) {
             BigDecimal decimal;
@@ -938,16 +956,16 @@ public class MongoSession
             // Java's BigDecimal.precision() returns precision for the unscaled value, so it skips leading zeros for values lower than 1.
             // Trino's (SQL) decimal precision must include leading zeros in values less than 1, and can never be lower than scale.
             int precision = Math.max(decimal.precision(), decimal.scale());
-            typeSignature = createDecimalType(precision, decimal.scale()).getTypeSignature();
+            type = createDecimalType(precision, decimal.scale());
         }
         else if (value instanceof Date) {
-            typeSignature = TIMESTAMP_MILLIS.getTypeSignature();
+            type = TIMESTAMP_MILLIS;
         }
         else if (value instanceof ObjectId) {
-            typeSignature = OBJECT_ID.getTypeSignature();
+            type = OBJECT_ID;
         }
         else if (value instanceof List) {
-            List<Optional<TypeSignature>> subTypes = ((List<?>) value).stream()
+            List<Optional<Type>> subTypes = ((List<?>) value).stream()
                     .map(this::guessFieldType)
                     .collect(toList());
 
@@ -955,48 +973,43 @@ public class MongoSession
                 return Optional.empty();
             }
 
-            Set<TypeSignature> signatures = subTypes.stream().map(Optional::get).collect(toSet());
-            if (signatures.size() == 1) {
-                typeSignature = new TypeSignature(StandardTypes.ARRAY, signatures.stream()
-                        .map(TypeSignatureParameter::typeParameter)
-                        .collect(Collectors.toList()));
+            Set<Type> types = subTypes.stream().map(Optional::get).collect(toSet());
+            if (types.size() == 1) {
+                type = new ArrayType(Iterables.getOnlyElement(types));
             }
             else {
                 // TODO: client doesn't handle empty field name row type yet
-                typeSignature = new TypeSignature(StandardTypes.ROW,
-                        IntStream.range(0, subTypes.size())
-                                .mapToObj(idx -> TypeSignatureParameter.namedTypeParameter(
-                                        new NamedTypeSignature(Optional.of(new RowFieldName(format("%s%d", implicitPrefix, idx + 1))), subTypes.get(idx).get())))
-                                .collect(toList()));
+                type = RowType.from(IntStream.range(0, subTypes.size())
+                        .mapToObj(idx -> RowType.field(
+                                format("%s%d", implicitPrefix, idx + 1),
+                                subTypes.get(idx).get()))
+                        .toList());
             }
         }
-        else if (value instanceof Document) {
-            List<TypeSignatureParameter> parameters = new ArrayList<>();
+        else if (value instanceof Document document) {
+            List<RowType.Field> fields = new ArrayList<>();
 
-            for (String key : ((Document) value).keySet()) {
-                Optional<TypeSignature> fieldType = guessFieldType(((Document) value).get(key));
+            for (String key : document.keySet()) {
+                Optional<Type> fieldType = guessFieldType(document.get(key));
                 if (fieldType.isPresent()) {
-                    parameters.add(TypeSignatureParameter.namedTypeParameter(new NamedTypeSignature(Optional.of(new RowFieldName(key)), fieldType.get())));
+                    fields.add(RowType.field(key, fieldType.get()));
                 }
             }
-            if (!parameters.isEmpty()) {
-                typeSignature = new TypeSignature(StandardTypes.ROW, parameters);
+            if (!fields.isEmpty()) {
+                type = RowType.from(fields);
             }
         }
-        else if (value instanceof DBRef) {
-            List<TypeSignatureParameter> parameters = new ArrayList<>();
+        else if (value instanceof DBRef dbRef) {
+            Type idFieldType = guessFieldType(dbRef.getId())
+                    .orElseThrow(() -> new UnsupportedOperationException("Unable to guess $id field type of DBRef from: " + dbRef.getId()));
 
-            TypeSignature idFieldType = guessFieldType(((DBRef) value).getId())
-                    .orElseThrow(() -> new UnsupportedOperationException("Unable to guess $id field type of DBRef from: " + ((DBRef) value).getId()));
-
-            parameters.add(TypeSignatureParameter.namedTypeParameter(new NamedTypeSignature(Optional.of(new RowFieldName(DATABASE_NAME)), VARCHAR.getTypeSignature())));
-            parameters.add(TypeSignatureParameter.namedTypeParameter(new NamedTypeSignature(Optional.of(new RowFieldName(COLLECTION_NAME)), VARCHAR.getTypeSignature())));
-            parameters.add(TypeSignatureParameter.namedTypeParameter(new NamedTypeSignature(Optional.of(new RowFieldName(ID)), idFieldType)));
-
-            typeSignature = new TypeSignature(StandardTypes.ROW, parameters);
+            type = RowType.from(ImmutableList.of(
+                    RowType.field(DATABASE_NAME, VARCHAR),
+                    RowType.field(COLLECTION_NAME, VARCHAR),
+                    RowType.field(ID, idFieldType)));
         }
 
-        return Optional.ofNullable(typeSignature);
+        return Optional.ofNullable(type);
     }
 
     public RemoteTableName toRemoteSchemaTableName(SchemaTableName schemaTableName)
@@ -1025,7 +1038,7 @@ public class MongoSession
 
     private MongoIterable<String> listDatabaseNames()
     {
-        return client.listDatabases()
+        return getClient().listDatabases()
                 .nameOnly(true)
                 .authorizedDatabasesOnly(true)
                 .map(result -> result.getString("name"));
@@ -1047,7 +1060,7 @@ public class MongoSession
 
     private List<String> listCollectionNames(String databaseName)
     {
-        MongoDatabase database = client.getDatabase(databaseName);
+        MongoDatabase database = getClient().getDatabase(databaseName);
         Document cursor = database.runCommand(new Document(AUTHORIZED_LIST_COLLECTIONS_COMMAND)).get("cursor", Document.class);
 
         List<Document> firstBatch = cursor.get("firstBatch", List.class);
@@ -1064,12 +1077,17 @@ public class MongoSession
                 .put("nameOnly", true)
                 .put("authorizedCollections", true)
                 .buildOrThrow());
-        Document cursor = client.getDatabase(schemaName).runCommand(listCollectionsCommand).get("cursor", Document.class);
+        Document cursor = getClient().getDatabase(schemaName).runCommand(listCollectionsCommand).get("cursor", Document.class);
         List<Document> firstBatch = cursor.get("firstBatch", List.class);
         if (firstBatch.isEmpty()) {
             return false;
         }
         String type = firstBatch.get(0).getString("type");
         return "view".equals(type);
+    }
+
+    private MongoClient getClient()
+    {
+        return client.get();
     }
 }
